<!--
  ~ Copyright (c) 2016, Amanj Sherwany <http://www.amanj.me>
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification,
  ~ are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this list
  ~     of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form must reproduce the above copyright notice, this list
  ~     of conditions and the following disclaimer in the documentation and/or other
  ~     materials provided with the distribution.
  ~
  ~ 3. Neither the name of the copyright holder nor the names of its contributors may be
  ~     used to endorse or promote products derived from this software without specific prior
  ~     written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
  ~ ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED
  ~ AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  ~  (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
  ~  THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<resources>
    <string name="app_name">Lap Timer</string>
    <string name="lap_ordinal_items">Lap %d</string>
    <string name="save_name_label">Activity name</string>
    <string name="save_dialog_ok_text">Done</string>
    <string name="save_dialog_cancel_text">Cancel</string>
    <string name="saved_list">Saved Activities</string>
    <string name="error_message_no_name">Please enter a name for this activity</string>
    <string name="merge_with_above">Merge with the above lap</string>
    <string name="merge_with_below">Merge with the below lap</string>
    <string name="list_caption_titles">Laps</string>
    <string name="list_caption_split">Split times</string>
    <string name="list_caption_laps">Lap times</string>
    <string name="text_view_elapsed_time_label">Elapsed time</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="precision_label">Precision</string>
    <string name="clear_history_label">Clear activites</string>
    <string name="rate_me_label">Rate me</string>
    <string name="fork_me_label">Developer page</string>
    <string name="navbar_settings">Settings</string>
    <string name="navbar_lap_on_stop">Lap on stop</string>
    <string name="navbar_screen_orientation_switch">Allow rotation</string>
    <string name="navbar_volume_key_switch">Allow volume keys</string>
    <string name="navbar_about_app">About</string>
    <string name="fine_precision">1/1000 seconds</string>
    <string name="less_fine_precision">1/100 seconds</string>
    <string name="gross_precision">1/10 seconds</string>
    <string name="more_gross_precision">1 second</string>
    <string name="precision_setting_title">Precision control</string>
    <string name="delete_entry">Delete</string>
    <string name="rename_entry">Rename</string>
    <string name="bad_entry_file">Saved activities cannot be loaded</string>
    <string name="bad_configuration_file">Saved configurations cannot be loaded</string>
    <string name="save_caption">Save</string>
    <string name="start_stop_caption">Start/Stop</string>
    <string name="lap_caption">Lap</string>
    <string name="overflow_caption">More...</string>
    <string name="single_item_title">%1$s at %2$s</string>
    <string name="version_number">Version %s</string>
    <string name="button_undo">Undo</string>
    <string name="average_lap">Average speed:</string>
    <string name="fastest_lap">Fastest speed:</string>
    <string name="slowest_lap">Slowest speed:</string>
    <string name="statistics_dialog">Statistics</string>
    <string name="show_statistics_menu">Show statics</string>
    <string name="clear_history_confirmation_message">Do you really want to clear your saved activities?</string>
</resources>
