<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016, Amanj Sherwany <http://www.amanj.me>
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification,
  ~ are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this list
  ~     of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form must reproduce the above copyright notice, this list
  ~     of conditions and the following disclaimer in the documentation and/or other
  ~     materials provided with the distribution.
  ~
  ~ 3. Neither the name of the copyright holder nor the names of its contributors may be
  ~     used to endorse or promote products derived from this software without specific prior
  ~     written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
  ~ ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED
  ~ AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  ~  (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
  ~  THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_view">
    <item android:title="@string/navbar_settings">
        <menu>
            <item android:id="@+id/nav_precision"
                android:icon="@drawable/ic_action_precision_nav"
                android:title="@string/precision_label" />
            <item
                app:actionLayout="@layout/nav_lap_on_stop_switch"
                android:icon="@drawable/ic_action_lap_on_stop_nav"
                android:id="@+id/nav_lap_on_stop_switch"
                android:title="@string/navbar_lap_on_stop" />
            <item
                app:actionLayout="@layout/nav_screen_orientation_switch"
                android:icon="@drawable/ic_action_screen_rotation_nav"
                android:id="@+id/nav_screen_orientation_switch"
                android:title="@string/navbar_screen_orientation_switch" />

            <item
                app:actionLayout="@layout/nav_screen_orientation_switch"
                android:icon="@drawable/ic_action_screen_rotation_nav"
                android:id="@+id/nav_volume_key_switch"
                android:title="@string/navbar_volume_key_switch" />

            <item android:id="@+id/nav_clear_history"
                android:icon="@drawable/ic_action_name_clear_history_nav"
                android:title="@string/clear_history_label" />
        </menu>
    </item>

    <item android:title="@string/navbar_about_app">
        <menu>
            <item android:id="@+id/nav_rate_me"
                android:icon="@drawable/ic_action_rate_me_nav"
                android:title="@string/rate_me_label" />
            <item android:id="@+id/nav_fork_me"
                android:icon="@drawable/ic_action_website_nav"
                android:title="@string/fork_me_label" />
        </menu>
    </item>
</menu>