<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016, Amanj Sherwany <http://www.amanj.me>
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification,
  ~ are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this list
  ~     of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form must reproduce the above copyright notice, this list
  ~     of conditions and the following disclaimer in the documentation and/or other
  ~     materials provided with the distribution.
  ~
  ~ 3. Neither the name of the copyright holder nor the names of its contributors may be
  ~     used to endorse or promote products derived from this software without specific prior
  ~     written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
  ~ ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED
  ~ AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  ~  (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
  ~  THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!-- Elapsed time -->
    <TextView
        android:id="@+id/text_view_total_time_label"
        android:text="@string/text_view_elapsed_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/elapsed_time_display"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>


    <TextView
        android:id="@+id/text_view_total_time_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/elapsed_time_display"
        android:layout_marginRight="10dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"/>


    <!-- laps captions -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/text_view_total_time_display"
        android:id="@+id/list_caption_layout"
        android:paddingTop="20dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/list_caption_titles"
            android:text="@string/list_caption_titles"
            android:layout_width="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textSize="@dimen/list_caption" />

        <TextView
            android:id="@+id/list_caption_elapsed"
            android:text="@string/list_caption_split"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textSize="@dimen/list_caption" />


        <!-- Just to adjust the layout -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:src="@drawable/ic_action_overflow"
            android:id="@+id/for_layout_overflow_icon"
            android:contentDescription="@string/overflow_caption"/>

        <TextView
            android:id="@+id/list_caption_laps"
            android:text="@string/list_caption_laps"
            android:layout_toLeftOf="@id/for_layout_overflow_icon"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textSize="@dimen/list_caption" />

    </RelativeLayout>
    <!-- laps -->
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_caption_layout"
        android:id="@+id/laps_list_view" />


</RelativeLayout>